working on #653: closing out aliquots

--- a/eclipse_ws/biobank2.tools/.project
+++ b/eclipse_ws/biobank2.tools/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>biobank2.strfields</name>
+	<name>biobank2.tools</name>
 	<comment></comment>
 	<projects>
 	</projects>
