--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -27,4 +27,5 @@ bin.includes = META-INF/,\
                lib/biobank-remote.jar,\
                lib/hibernate-validator.jar,\
                .
-source.. = src/
+source.. = src/,\
+           conf/
