--- a/build.xml
+++ b/build.xml
@@ -48,7 +48,7 @@
   <property name="biobank.importer.jar.files"
             value="mysql-connector-java-5.1.7-bin.jar" />
   <property name="biobank.tools.jar.files"
-            value="commons-io-1.4.jar,jargs.jar,opencsv-2.2.jar" />
+            value="commons-io-1.4.jar, jargs.jar, opencsv-2.2.jar" />
   <property name="cacore.system.jar.files"
             value="commons-collections-3.2.jar,commons-logging-1.1.jar" />
   <property name="test.output" location="testing" />
@@ -284,6 +284,9 @@
     <copy todir="${eclipse.proj.dir.importer}/lib">
       <filelist dir="${req.jars.dir}" files="${biobank.importer.jar.files}"/>
       <fileset file="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib/log4j-1.2.14.jar"/>
+    </copy>
+    <copy todir="${eclipse.proj.dir.tools}/lib">
+      <filelist dir="${req.jars.dir}" files="${biobank.tools.jar.files}"/>
     </copy>
   </target>
   <!-- JBoss -->
