--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -219,6 +219,10 @@
             id="edu.ualberta.med.biobank.commands.patients.patientDelete"
             name="Delete patient">
       </command>
+       <command
+             id="edu.ualberta.med.biobank.commands.patients.patientMerge"
+             name="Merge patient">
+       </command>
       <command
             id="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
             name="Add Patient Visit">
@@ -883,6 +887,37 @@
             </and>
          </enabledWhen>
       </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.PatientMergeHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.patientMerge">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="biobank2.patientsPerspectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.siteSelected">
+               </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <and>
+               <reference
+                     definitionId="oneElementSelected">
+               </reference>
+               <with
+                     variable="selection">
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <instanceof
+                           value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                     </instanceof>
+                  </iterate>
+               </with>
+            </and>
+         </enabledWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -1310,18 +1345,6 @@
                </visibleWhen>
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
-                  icon="icons/patient_delete.png"
-                  label="Delete Patient"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.patientsPerspectiveSelected">
-                  </reference>
-               </visibleWhen>
-            </command>
-            <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
                   icon="icons/patientVisit_add.png"
                   label="Add Patient Visit"
@@ -1412,6 +1435,24 @@
                         definitionId="biobank2.patientsPerspectiveSelected">
                   </reference>
                </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
+                  icon="icons/patient_delete.png"
+                  label="Delete Patient"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.patientsPerspectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientMerge"
+                  icon="icons/patient_add.png"
+                  label="Merge Patient"
+                  style="push">
             </command>
          </toolbar>
          <toolbar
@@ -1718,6 +1759,13 @@
             icon="icons/patient.png"
             id="edu.ualberta.med.biobank.forms.PatientViewForm"
             name="Patient View">
+      </editor>
+      <editor
+            class="edu.ualberta.med.biobank.forms.PatientMergeForm"
+            default="false"
+            icon="icons/patient.png"
+            id="edu.ualberta.med.biobank.forms.PatientMergeForm"
+            name="Patient Merge">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.PatientVisitEntryForm"
