good configuration of common for export

--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,5 +1,4 @@
 bin.includes = META-INF/,\
-               .,\
-               lib/client/
-source.. = src/,\
-           conf/
+               conf/,\
+               bin/,\
+               lib/
