--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,7 @@
   <property name="biobank.importer.jar.files"
             value="mysql-connector-java-5.1.7-bin.jar" />
   <property name="biobank.tools.jar.files"
-            value="commons-io-1.4.jar, jargs.jar, opencsv-2.2.jar" />
+            value="commons-io-1.4.jar, jargs.jar, opencsv-2.2.jar, mysql-connector-java-5.1.7-bin.jar" />
   <property name="cacore.system.jar.files"
             value="commons-collections-3.2.jar,commons-logging-1.1.jar,hibernate-validator.jar" />
   <property name="test.output" location="testing" />
