--- a/eclipse_ws/biobank2.tools/.classpath
+++ b/eclipse_ws/biobank2.tools/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/jargs.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-2.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/biobank.common"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
