--- a/build.xml
+++ b/build.xml
@@ -410,7 +410,27 @@
 
 
   <target name="build-common-project">
-	<ant dir="${eclipse.proj.dir.common}" target="build" inheritRefs="false" />
+  	<echo message="Building common project" />
+  	<mkdir dir="${eclipse.proj.dir.common}/bin" />
+	<copy includeemptydirs="false" todir="${eclipse.proj.dir.common}/bin">
+      <fileset dir="${eclipse.proj.dir.common}/src">
+  	    <exclude name="**/*.launch" />
+  	    <exclude name="**/*.java" />
+  	  </fileset>
+  	</copy>
+  	<javac debug="true" debuglevel="source,lines,vars" destdir="${eclipse.proj.dir.common}/bin" source="1.6" target="1.6">
+  	  <src path="${eclipse.proj.dir.common}/src" />
+  	    <classpath>
+  		  <path id="biobank.common.classpath">
+   		    <fileset dir="${eclipse.proj.dir.common}/lib/server">
+			  <include name="*.jar" />
+			</fileset>
+			<fileset dir="${eclipse.proj.dir.common}/lib/client">
+			  <include name="*.jar" />
+			</fileset>
+		  </path>
+  	    </classpath>
+  	  </javac>
   </target>
 
 
@@ -481,7 +501,7 @@
           depends="tests-clean,clean-jars, clean-caCore"
           description="cleans caCORE SDK and deletes jars from eclipse projects">
     <ant target="clean-jars" />
-    <ant dir="${eclipse.proj.dir.common}" target="clean" inheritRefs="false" />
+  	<delete dir="${eclipse.proj.dir.common}/bin" />		
   </target>
 
   <target name="clean-caCore"
