--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,4 +1,6 @@
 bin.includes = META-INF/,\
-               conf/,\
-               bin/,\
-               lib/
+               lib/,\
+               .
+source.. = src/,\
+           conf/
+output.. = bin/
