--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -15,5 +15,5 @@ bin.includes = META-INF/,\
                lib/mail.jar,\
                lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar
-output.conf/ = bin/
+outputj.conf/ = bin/
 Bundle-NativeCode: scanlib.dll
