--- a/build.xml
+++ b/build.xml
@@ -411,14 +411,14 @@
 
   <target name="build-common-project">
   	<echo message="Building common project" />
-  	<mkdir dir="${eclipse.proj.dir.common}/bin" />
-	<copy includeemptydirs="false" todir="${eclipse.proj.dir.common}/bin">
+  	<mkdir dir="${eclipse.proj.dir.common}/output" />
+	<copy includeemptydirs="false" todir="${eclipse.proj.dir.common}/output">
       <fileset dir="${eclipse.proj.dir.common}/src">
   	    <exclude name="**/*.launch" />
   	    <exclude name="**/*.java" />
   	  </fileset>
   	</copy>
-  	<javac debug="true" debuglevel="source,lines,vars" destdir="${eclipse.proj.dir.common}/bin" source="1.6" target="1.6">
+  	<javac debug="true" debuglevel="source,lines,vars" destdir="${eclipse.proj.dir.common}/output" source="1.6" target="1.6">
   	  <src path="${eclipse.proj.dir.common}/src" />
   	    <classpath>
   		  <path id="biobank.common.classpath">
@@ -478,7 +478,7 @@
         <include name="${csm.ehcache.file}" />
         <include name="${clm.object.state.logger.config}" />
       </classes>
-      <classes dir="${eclipse.proj.dir.common}/bin" >
+      <classes dir="${eclipse.proj.dir.common}/output" >
         <include name="**/common/**"/>
         <include name="**/server/**"/>
       </classes>
@@ -501,7 +501,7 @@
           depends="tests-clean,clean-jars, clean-caCore"
           description="cleans caCORE SDK and deletes jars from eclipse projects">
     <ant target="clean-jars" />
-  	<delete dir="${eclipse.proj.dir.common}/bin" />		
+  	<delete dir="${eclipse.proj.dir.common}/output" />		
   </target>
 
   <target name="clean-caCore"
