more reports refactoring... semi-functional

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -1,44 +1,69 @@
 AliquotCount.NAME = Sample Type Totals
 AliquotCount.DESCRIPTION=Lists the total number of aliquots per sample type.
+AliquotCount.EDITOR=AliquotCountEditor
 AliquotInvoiceByClinic.NAME = Aliquots per Clinic by Date
 AliquotInvoiceByClinic.DESCRIPTION=Lists all aliquots linked in a particular date range, ordered by clinic.
+AliquotInvoiceByClinic.EDITOR=AliquotInvoiceByClinicEditor
 AliquotInvoiceByPatient.NAME = Aliquots per Patient by Date
-AliquotInvoicByPatient.DESCRIPTION =Lists all aliquots linked in a particular date range, ordered by patient.
+AliquotInvoiceByPatient.DESCRIPTION =Lists all aliquots linked in a particular date range, ordered by patient.
+AliquotInvoiceByPatient.EDITOR=AliquotInvoiceByPatientEditor
 AliquotRequest.NAME = Aliquot Request by CSV file
 AliquotRequest.DESCRIPTION=Given a CSV file detailing a request (Patient Number, Date Drawn, Sample Type, # Requested), generate a list of aliquot locations.
+AliquotRequest.EDITOR=AliquotRequestEditor
+AliquotsByPallet.NAME = Aliquots By Pallet
+AliquotsByPallet.DESCRIPTION = Lists all aliquots in a given pallet.
+AliquotsByPallet.EDITOR = AliquotsByPalletEditor
 AliquotSCount.NAME= Sample Types by Study
 AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
+AliquotSCount.EDITOR = AliquotsByStudyEditor
 CabinetCAliquots.NAME = Cabinet Aliquots per Study per Clinic
 CabinetCAliquots.DESCRIPTION = Displays the total number of cabinet aliquots per study per clinic. Note: the top container's name must contain 'Cabinet'.
+CabinetCAliquots.EDITOR= AliquotsByStudyClinicEditor
 CabinetDAliquots.NAME = Cabinet Aliquots per Study per Clinic by Date
 CabinetDAliquots.DESCRIPTION=Displays the total number of cabinet aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year. Note: the top container's name must contain 'Cabinet'.
+CabinetDAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 CabinetSAliquots.NAME =Cabinet Aliquots per Study
 CabinetSAliquots.DESCRIPTION=Displays the total number of cabinet aliquots per study. Note: the top container's name must contain 'Cabinet'.
+CabinetSAliquots.EDITOR = AliquotsByStudyEditor
 FreezerCAliquots.NAME = Freezer Aliquots per Study per Clinic
 FreezerCAliquots.DESCRIPTION=Displays the total number of freezer aliquots per study per clinic. Note: the top container's name must contain 'Freezer'.
+FreezerCAliquots.EDITOR =AliquotsByStudyClinicEditor
 FreezerDAliquots.NAME = Freezer Aliquots per Study per Clinic by Date
 FreezerDAliquots.DESCRIPTION = Displays the total number of freezer aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year. Note: the top container's name must contain 'Freezer'.
+FreezerDAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 FreezerSAliquots.NAME= Freezer Aliquots per Study
 FreezerSAliquots.DESCRIPTION =Displays the total number of freezer aliquots per study. Note: the top container's name must contain 'Freezer'.
+FreezerSAliquots.EDITOR = AliquotsByStudyEditor
 FvLPatientVisits.NAME = Clinic Activity by Study
 FvLPatientVisits.DESCRIPTION =Reports the date of the first and last patient visit for each clinic in each study.
+FvLPatientVisits.EDITOR = FvLPatientVisitsEditor
 NewPVsByStudyClinic.NAME = New Patient Visits per Study per Clinic by Date
 NewPVsByStudyClinic.DESCRIPTION =Displays the total number of patient visits added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
+NewPVsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
 NewPsByStudyClinic.NAME = New Patients per Study per Clinic by Date
 NewPsByStudyClinic.DESCRIPTION=Displays the total number of patients added per study per clinic grouped by date processed in a calendar week/month/quarter/year.
+NewPsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
 PatientVisitSummary.NAME = Patient Visit Statistics by Study and Clinic
 PatientVisitSummary.DESCRIPTION=Displays the total number of patients for each of 1-5+ visits, the total number of visits, and the total number of patients per study per clinic for a given date range.
+PatientVisitSummary.EDITOR=PatientVisitSummaryEditor
 PatientWBC.NAME = Patient WBC Aliquots
 PatientWBC.DESCRIPTION=Displays a list of the WBC aliquots located in Cabinets taken from a patient. Note: the full name of the sample type must contain 'DNA', and the top container's name must contain 'Cabinet'.
+PatientWBC.EDITOR=PatientWBCEditor
 PsByStudy.NAME = Patients per Study by Date
 PsByStudy.DESCRIPTION=Displays the total number of patients per study with at least one patient visit grouped by date processed in a calendar week/month/quarter/year.
+PsByStudy.EDITOR = PsByStudyDateEditor
 PVsByStudy.NAME=Patient Visits per Study by Date
 PVsByStudy.DESCRIPTION=Displays the total number of patient visits per study grouped by date processed in a calendar week/month/quarter/year.
+PVsByStudy.EDITOR = PsByStudyDateEditor
 QACabinetAliquots.NAME = Cabinet Aliquot QA
 QACabinetAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type.  Note: the number of aliquots must be specified, and the top container's name must contain 'Cabinet'.
+QACabinetAliquots.EDITOR = QAAliquotsEditor
 QAFreezerAliquots.NAME = Freezer Aliquot QA
 QAFreezerAliquots.DESCRIPTION=Retrieves a list of aliquots, at random, within a date range, by sample type. Note: the number of aliquots must be specified, and the top container's name must contain 'Freezer'.
+QAFreezerAliquots.EDITOR = QAAliquotsEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
+SampleTypePvCount.EDITOR = SampleTypePvCountEditor
 SampleTypeSUsage.NAME=Sample Type Usage by Study
-SampleTypeSUsage.DESCRIPTION=Lists sample types, and the associated studies permitting them as valid sample storage. 
+SampleTypeSUsage.DESCRIPTION=Lists sample types, and the associated studies permitting them as valid sample storage.
+SampleTypeSUsage.EDITOR = SampleTypeSUsageEditor
