reports refactoring complete: just need to make mods so advanced reports work again

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -15,7 +15,7 @@ AliquotsByPallet.DESCRIPTION = Lists all aliquots in a given pallet.
 AliquotsByPallet.EDITOR = AliquotsByPalletEditor
 AliquotSCount.NAME= Sample Types by Study
 AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
-AliquotSCount.EDITOR = AliquotsByStudyEditor
+AliquotSCount.EDITOR = AliquotSCountEditor
 CabinetCAliquots.NAME = Cabinet Aliquots per Study per Clinic
 CabinetCAliquots.DESCRIPTION = Displays the total number of cabinet aliquots per study per clinic. Note: the top container's name must contain 'Cabinet'.
 CabinetCAliquots.EDITOR= AliquotsByStudyClinicEditor
