--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1988,6 +1988,13 @@
             id="edu.ualberta.med.biobank.editors.PatientVisitSummaryEditor"
             name="Patient Visit Summary">
       </editor>
+      <editor
+            class="edu.ualberta.med.biobank.forms.reports.AliquotSCountEditor"
+            default="false"
+            icon="icons/reportsPerspective.png"
+            id="edu.ualberta.med.biobank.editors.AliquotSCountEditor"
+            name="Aliquot Study Count">
+      </editor>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
