created working activity status form & overrided equals in shipping_method_wrapper

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1943,7 +1943,7 @@
             name="Sample Type Totals by Patient Visit and Study">
       </editor>
       <editor
-            class="edu.ualberta.med.biobank.forms.ActivityStatusMethodEntryForm"
+            class="edu.ualberta.med.biobank.forms.ActivityStatusEntryForm"
             default="false"
             id="edu.ualberta.med.biobank.forms.ActivityStatusMethodEntryForm"
             name="Activity StatusMethod Entry">
