--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ eclipse_ws/biobank.common/lib/*.jar
 eclipse_ws/biobank.common/lib/client/*.jar
 eclipse_ws/biobank.common/lib/server/*.jar
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/test
+eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/test
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/VarCharLengths.java
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/VarCharLengths.properties
 eclipse_ws/biobank2.importer/bin
