change password dialog & button in admin. menu

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -275,6 +275,10 @@
             id="edu.ualberta.med.biobank.commands.editActivityStatusMethods"
             name="Edit Activity Status">
       </command>
+      <command
+            id="edu.ualberta.med.biobank.commands.changePassword"
+            name="Change Password">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
@@ -905,6 +909,20 @@
             </and>
          </activeWhen>
       </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.ChangePasswordHandler"
+            commandId="edu.ualberta.med.biobank.commands.changePassword">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+               <reference
+                     definitionId="biobank2.mainPerspectiveSelected">
+               </reference>
+            </and>
+         </activeWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -997,6 +1015,12 @@
                       commandId="edu.ualberta.med.biobank.commands.editActivityStatusMethods"
                       id="edu.ualberta.med.biobank.menu.editActivityStatusMethods"
                       label="Edit Activity Status"
+                      style="push">
+                </command>
+                <command
+                      commandId="edu.ualberta.med.biobank.commands.changePassword"
+                      id="edu.ualberta.med.biobank.menu.changePassword"
+                      label="Change Password"
                       style="push">
                 </command>
          </menu>
