resolves #302: cabinet/freezer reports are now combined

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -16,24 +16,15 @@ AliquotsByPallet.EDITOR = AliquotsByPalletEditor
 AliquotSCount.NAME= Sample Types by Study
 AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
 AliquotSCount.EDITOR = AliquotSCountEditor
-CabinetCAliquots.NAME = Cabinet Aliquots per Study per Clinic
-CabinetCAliquots.DESCRIPTION = Displays the total number of cabinet aliquots per study per clinic. Note: the top container's name must contain 'Cabinet'.
-CabinetCAliquots.EDITOR= AliquotsByStudyClinicEditor
-CabinetDAliquots.NAME = Cabinet Aliquots per Study per Clinic by Date
-CabinetDAliquots.DESCRIPTION=Displays the total number of cabinet aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year. Note: the top container's name must contain 'Cabinet'.
-CabinetDAliquots.EDITOR = AliquotsByStudyClinicDateEditor
-CabinetSAliquots.NAME =Cabinet Aliquots per Study
-CabinetSAliquots.DESCRIPTION=Displays the total number of cabinet aliquots per study. Note: the top container's name must contain 'Cabinet'.
-CabinetSAliquots.EDITOR = AliquotsByStudyEditor
-FreezerCAliquots.NAME = Freezer Aliquots per Study per Clinic
-FreezerCAliquots.DESCRIPTION=Displays the total number of freezer aliquots per study per clinic. Note: the top container's name must contain 'Freezer'.
-FreezerCAliquots.EDITOR =AliquotsByStudyClinicEditor
-FreezerDAliquots.NAME = Freezer Aliquots per Study per Clinic by Date
-FreezerDAliquots.DESCRIPTION = Displays the total number of freezer aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year. Note: the top container's name must contain 'Freezer'.
-FreezerDAliquots.EDITOR = AliquotsByStudyClinicDateEditor
-FreezerSAliquots.NAME= Freezer Aliquots per Study
-FreezerSAliquots.DESCRIPTION =Displays the total number of freezer aliquots per study. Note: the top container's name must contain 'Freezer'.
-FreezerSAliquots.EDITOR = AliquotsByStudyEditor
+CAliquots.NAME = Aliquots per Study per Clinic
+CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for a given top-level container type.
+CAliquots.EDITOR= AliquotsByStudyClinicEditor
+DAliquots.NAME = Aliquots per Study per Clinic by Date
+DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
+DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
+SAliquots.NAME =Aliquots per Study
+SAliquots.DESCRIPTION=Displays the total number of aliquots per study for a given top-level container type.
+SAliquots.EDITOR = AliquotsByStudyEditor
 FvLPatientVisits.NAME = Clinic Activity by Study
 FvLPatientVisits.DESCRIPTION =Reports the date of the first and last patient visit for each clinic in each study.
 FvLPatientVisits.EDITOR = FvLPatientVisitsEditor
@@ -55,12 +46,9 @@ PsByStudy.EDITOR = PsByStudyDateEditor
 PVsByStudy.NAME=Patient Visits per Study by Date
 PVsByStudy.DESCRIPTION=Displays the total number of patient visits per study grouped by date processed in a calendar week/month/quarter/year.
 PVsByStudy.EDITOR = PsByStudyDateEditor
-QACabinetAliquots.NAME = Cabinet Aliquot QA
-QACabinetAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type.  Note: the number of aliquots must be specified, and the top container's name must contain 'Cabinet'.
-QACabinetAliquots.EDITOR = QAAliquotsEditor
-QAFreezerAliquots.NAME = Freezer Aliquot QA
-QAFreezerAliquots.DESCRIPTION=Retrieves a list of aliquots, at random, within a date range, by sample type. Note: the number of aliquots must be specified, and the top container's name must contain 'Freezer'.
-QAFreezerAliquots.EDITOR = QAAliquotsEditor
+QAAliquots.NAME = Aliquot QA
+QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given top-level container type.  Note: the number of aliquots must be specified.
+QAAliquots.EDITOR = QAAliquotsEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
 SampleTypePvCount.EDITOR = SampleTypePvCountEditor
