resolves #718: user can now select multiple top containers

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -47,7 +47,7 @@ PVsByStudy.NAME=Patient Visits per Study by Date
 PVsByStudy.DESCRIPTION=Displays the total number of patient visits per study grouped by date processed in a calendar week/month/quarter/year.
 PVsByStudy.EDITOR = PsByStudyDateEditor
 QAAliquots.NAME = Aliquot QA
-QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given top-level container type.  Note: the number of aliquots must be specified.
+QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given set of top-level containers.  Note: the number of aliquots must be specified.
 QAAliquots.EDITOR = QAAliquotsEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
