resolves #713: report has been added that displays the capacities of all top containers

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -19,6 +19,9 @@ AliquotSCount.EDITOR = AliquotSCountEditor
 CAliquots.NAME = Aliquots per Study per Clinic
 CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for a given top-level container type.
 CAliquots.EDITOR= AliquotsByStudyClinicEditor
+ContainerCapacity.NAME = Container Capacity
+ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
+ContainerCapacity.EDITOR = ContainerCapacityEditor
 DAliquots.NAME = Aliquots per Study per Clinic by Date
 DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
 DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
