--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -2088,6 +2088,13 @@
             id="edu.ualberta.med.biobank.forms.ActivityStatusMethodEntryForm"
             name="Activity StatusMethod Entry">
       </editor>
+<editor
+      class="edu.ualberta.med.biobank.forms.reports.ContainerCapacityEditor"
+      default="false"
+      icon="icons/reportsPerspective.png"
+      id="edu.ualberta.med.biobank.editors.ContainerCapacityEditor"
+      name="Container Capacity">
+</editor>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
