--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -25,6 +25,9 @@ ContainerCapacity.EDITOR = ContainerCapacityEditor
 DAliquots.NAME = Aliquots per Study per Clinic by Date
 DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
 DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
+ContainerEmptyLocations.NAME = Available Pallet Locations by Container
+ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given container.
+ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
 SAliquots.NAME =Aliquots per Study
 SAliquots.DESCRIPTION=Displays the total number of aliquots per study for a given top-level container type.
 SAliquots.EDITOR = AliquotsByStudyEditor
