resolves #715: new report added, FTA report

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -2102,6 +2102,13 @@
       id="edu.ualberta.med.biobank.editors.ContainerEmptyLocationsEditor"
       name="Container Empty Locations">
 </editor>
+<editor
+      class="edu.ualberta.med.biobank.forms.reports.FTAReportEditor"
+      default="false"
+      icon="icons/reportsPerspective.png"
+      id="edu.ualberta.med.biobank.editors.FTAReportEditor"
+      name="FTA Report">
+</editor>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
