--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -22,15 +22,15 @@ CAliquots.EDITOR= AliquotsByStudyClinicEditor
 ContainerCapacity.NAME = Container Capacity
 ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
 ContainerCapacity.EDITOR = ContainerCapacityEditor
-DAliquots.NAME = Aliquots per Study per Clinic by Date
-DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
-DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 ContainerEmptyLocations.NAME = Available Pallet Locations by Container
 ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given container.
 ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
-SAliquots.NAME =Aliquots per Study
-SAliquots.DESCRIPTION=Displays the total number of aliquots per study for a given top-level container type.
-SAliquots.EDITOR = AliquotsByStudyEditor
+DAliquots.NAME = Aliquots per Study per Clinic by Date
+DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
+DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
+FTAReport.NAME = FTA Aliquots by First Visit
+FTAReport.DESCRIPTION = Retrieves one FTA card for a patient with their first patient visit after the specified date, for a given study. 
+FTAReport.EDITOR = FTAReportEditor
 FvLPatientVisits.NAME = Clinic Activity by Study
 FvLPatientVisits.DESCRIPTION =Reports the date of the first and last patient visit for each clinic in each study.
 FvLPatientVisits.EDITOR = FvLPatientVisitsEditor
@@ -55,6 +55,9 @@ PVsByStudy.EDITOR = PsByStudyDateEditor
 QAAliquots.NAME = Aliquot QA
 QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given set of top-level containers.  Note: the number of aliquots must be specified.
 QAAliquots.EDITOR = QAAliquotsEditor
+SAliquots.NAME =Aliquots per Study
+SAliquots.DESCRIPTION=Displays the total number of aliquots per study for a given top-level container type.
+SAliquots.EDITOR = AliquotsByStudyEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
 SampleTypePvCount.EDITOR = SampleTypePvCountEditor
